samples/_failures_safe/1761625064_8d6e23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5df216ae.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_5df216ae.c:187: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_5df216ae.c:186:5: error: expected declaration or statement at end of input
  186 |     if
      |     ^~
